--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ Unidecode = "^1.3.3"
 bottle = "^0.12.21"
 pyotp = "^2.6.0"
 cachable = "^0.3.7"
+pyowm = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 pydebug = "^1.0.3"
