--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ bottle = "^0.12.21"
 pyotp = "^2.6.0"
 cachable = "^0.3.7"
 pyowm = "^3.3.0"
+pandas = "^1.4.3"
 
 [tool.poetry.dev-dependencies]
 pydebug = "^1.0.3"
