--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ url = "https://pypi.cacko.net/simple/"
 python = "^3.10"
 dataclasses-json = "^0.5.6"
 toml = "^0.10.2"
-botyo-client = "^0.6.4"
 Unidecode = "^1.3.3"
 bottle = "^0.12.21"
 pyotp = "^2.6.0"
 cachable = "^0.3.7"
 pyowm = "^3.3.0"
 pandas = "^1.4.3"
+APScheduler = "^3.9.1"
 
 [tool.poetry.dev-dependencies]
 pydebug = "^1.0.3"
