--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "lametric"
+name = "tick"
 version = "0.1.0"
 description = ""
 authors = ["cacko <alex@cacko.net>"]
@@ -11,19 +11,18 @@ url = "https://pypi.cacko.net/simple/"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-dataclasses-json = "^0.5.6"
+dataclasses-json = "^0.5.7"
 toml = "^0.10.2"
-Unidecode = "^1.3.3"
-bottle = "^0.12.21"
+Unidecode = "^1.3.4"
+bottle = "^0.12.23"
 pyotp = "^2.6.0"
-cachable = "^0.3.7"
 pyowm = "^3.3.0"
 pandas = "^1.4.3"
 APScheduler = "^3.9.1"
+cachable = "^0.3.7"
 
 [tool.poetry.dev-dependencies]
-pydebug = "^1.0.3"
-flake8 = "^4.0.1"
+flake8 = "^5.0.4"
 autopep8 = "^1.6.0"
 
 [build-system]
