--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,14 @@ url = "https://pypi.cacko.net/simple/"
 [tool.poetry.dependencies]
 python = "^3.10"
 dataclasses-json = "^0.5.7"
-toml = "^0.10.2"
 Unidecode = "^1.3.4"
 bottle = "^0.12.23"
 pyotp = "^2.6.0"
-pyowm = "^3.3.0"
 pandas = "^1.4.3"
 APScheduler = "^3.9.1"
-cachable = "^0.3.7"
+cachable = "^0.3.9"
+pixelme = "^0.4.6"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
