--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ APScheduler = "^3.9.1"
 cachable = "^0.3.10"
 PyYAML = "^6.0"
 requests-toolbelt = "^0.9.1"
+stringcase = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
