--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ url = "https://pypi.cacko.net/simple/"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-dataclasses-json = "^0.5.7"
+dataclasses-json = {git = "https://github.com/lidatong/dataclasses-json"}
 Unidecode = "^1.3.4"
 bottle = "^0.12.23"
 pyotp = "^2.6.0"
