--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ url = "https://pypi.cacko.net/simple/"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-dataclasses-json = {git = "https://github.com/lidatong/dataclasses-json"}
 Unidecode = "^1.3.4"
 bottle = "^0.12.23"
 pyotp = "^2.6.0"
@@ -21,6 +20,7 @@ cachable = "^0.3.10"
 PyYAML = "^6.0"
 requests-toolbelt = "^0.9.1"
 stringcase = "^1.2.0"
+dataclasses-json = "^0.5.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
