--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,7 +8,7 @@ vars:
 tasks:
   default:
     cmds:
-      - conda run --live-stream -n tick python -m app
+      - $CONDA_EXE run --live-stream -n tick python -m app
     silent: true
 
   logs:
@@ -60,4 +60,4 @@ tasks:
   systemd-exec:
     desc: run the server
     cmds:
-      - direnv exec . conda run --live-stream -n tick python -m app
+      - direnv exec . $CONDA_EXE run --live-stream -n tick python -m app
