--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -31,6 +31,11 @@ tasks:
     cmds:
       - ssh $REMOTE_HOST 'source ~/.zshrc;systemctl --user stop {{.PROJECT}}'
 
+  export:
+    desc: export env
+    cmds:
+      - conda env export --no-builds  -n {{.PROJECT}} > environment.yml
+
   push:
     desc: commit and pushes current changes
     cmds:
@@ -46,6 +51,7 @@ tasks:
   pp:
     desc: push and pull
     cmds:
+      - task: export
       - task: push
       - task: pull
 
