--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
   - xz=5.2.6
   - pip:
     - anyio==3.6.1
-    - apscheduler==4.0.0a1.post1
+    - apscheduler==4.0.0a1
     - async-timeout==4.0.2
     - attrs==22.1.0
     - beautifulsoup4==4.11.1
