Replace all whitespaces with tabs.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -59,7 +59,7 @@ tasks:
   update:
     desc: uypdat env
     cmds:
-      -  ssh $REMOTE_HOST 'source ~/.zshrc;cd /var/www/{{.PROJECT}};conda env update -n {{.PROJECT}} -f environment.yml --prune
+      -  ssh $REMOTE_HOST 'source ~/.zshrc;cd /var/www/{{.PROJECT}};conda env update -n {{.PROJECT}} -f environment.yml --prune'
 
   deploy:
     desc: shortcut for stop -> push -> pull -> restart
