--- a/environment.yml
+++ b/environment.yml
@@ -59,4 +59,6 @@ dependencies:
     - unidecode==1.3.4
     - urllib3==1.26.12
     - wrapt==1.14.1
+variables:
+  PIP_EXTRA_INDEX_URL: https://pypi.cacko.net/simple/
 prefix: /Users/jago/miniforge3/envs/tick-server
