--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: tick-server
 channels:
   - conda-forge
 dependencies:
+  - autopep8=1.7.0
   - bzip2=1.0.8
   - ca-certificates=2022.6.15
   - libffi=3.4.2
@@ -10,11 +11,13 @@ dependencies:
   - ncurses=6.3
   - openssl=3.0.5
   - pip=22.2.2
+  - pycodestyle=2.9.1
   - python=3.10.6
   - python_abi=3.10
   - readline=8.1.2
   - setuptools=65.3.0
   - tk=8.6.12
+  - toml=0.10.2
   - wheel=0.37.1
   - xz=5.2.6
   - pip:
@@ -59,6 +62,7 @@ dependencies:
     - unidecode==1.3.4
     - urllib3==1.26.12
     - wrapt==1.14.1
+    - yapf==0.32.0
 variables:
   PIP_EXTRA_INDEX_URL: https://pypi.cacko.net/simple/
 prefix: /Users/jago/miniforge3/envs/tick-server
