--- a/environment.yml
+++ b/environment.yml
@@ -27,20 +27,26 @@ dependencies:
     - attrs==22.1.0
     - beautifulsoup4==4.11.1
     - bottle==0.12.23
+    - butilka==0.1.9
     - cachable==0.3.11
     - certifi==2022.6.15
     - charset-normalizer==2.1.1
+    - coloredlogs==15.0.1
     - dataclasses-json==0.5.7
     - deprecated==1.2.13
+    - flake8==5.0.4
+    - humanfriendly==10.0
     - idna==3.3
     - marshmallow==3.17.1
     - marshmallow-enum==1.5.1
+    - mccabe==0.7.0
     - mypy-extensions==0.4.3
     - numpy==1.23.2
     - packaging==21.3
     - pandas==1.4.3
     - paste==3.5.2
     - pillow==9.2.0
+    - pyflakes==2.5.0
     - pyotp==2.6.0
     - pyparsing==3.0.9
     - python-dateutil==2.8.2
@@ -51,6 +57,7 @@ dependencies:
     - redis==4.3.4
     - requests==2.28.1
     - requests-toolbelt==0.9.1
+    - semver==2.13.0
     - six==1.16.0
     - sniffio==1.2.0
     - soupsieve==2.3.2.post1
