--- a/environment.yml
+++ b/environment.yml
@@ -3,14 +3,19 @@ channels:
   - conda-forge
 dependencies:
   - autopep8=1.7.0
+  - black=22.10.0
   - bzip2=1.0.8
-  - ca-certificates=2022.6.15
+  - ca-certificates=2022.9.24
+  - click=8.1.3
   - libffi=3.4.2
   - libsqlite=3.39.2
   - libzlib=1.2.12
+  - mypy_extensions=0.4.3
   - ncurses=6.3
-  - openssl=3.0.5
+  - openssl=3.0.7
+  - pathspec=0.10.2
   - pip=22.2.2
+  - platformdirs=2.5.2
   - pycodestyle=2.9.1
   - python=3.10.6
   - python_abi=3.10
@@ -18,6 +23,7 @@ dependencies:
   - setuptools=65.3.0
   - tk=8.6.12
   - toml=0.10.2
+  - tomli=2.0.1
   - wheel=0.37.1
   - xz=5.2.6
   - pip:
@@ -31,6 +37,7 @@ dependencies:
     - cachable==0.3.11
     - certifi==2022.6.15
     - charset-normalizer==2.1.1
+    - colorama==0.4.6
     - dataclasses-json==0.5.7
     - deprecated==1.2.13
     - flake8==5.0.4
@@ -39,7 +46,6 @@ dependencies:
     - marshmallow==3.17.1
     - marshmallow-enum==1.5.1
     - mccabe==0.7.0
-    - mypy-extensions==0.4.3
     - numpy==1.23.2
     - packaging==21.3
     - pandas==1.4.3
@@ -73,4 +79,4 @@ dependencies:
     - yapf==0.32.0
 variables:
   PIP_EXTRA_INDEX_URL: https://pypi.cacko.net/simple/
-prefix: /Users/jago/miniforge3/envs/tick-server
+prefix: /Users/jago/miniforge3/envs/global/envs/tick-server
