--- a/environment.yml
+++ b/environment.yml
@@ -27,61 +27,62 @@ dependencies:
   - wheel=0.38.4
   - xz=5.2.6
   - pip:
-    - anyio==3.6.1
-    - apscheduler==3.9.1.1
-    - async-timeout==4.0.2
-    - attrs==22.1.0
-    - beautifulsoup4==4.11.1
-    - better-exceptions==0.3.3
-    - bottle==0.12.23
-    - butilka==0.1.15
-    - cachable==0.3.11
-    - certifi==2022.6.15
-    - charset-normalizer==2.1.1
-    - colorama==0.4.6
-    - commonmark==0.9.1
-    - corelog==0.0.7
-    - dataclasses-json==0.5.7
-    - deprecated==1.2.13
-    - flake8==5.0.4
-    - humanfriendly==10.0
-    - idna==3.3
-    - marshmallow==3.17.1
-    - marshmallow-enum==1.5.1
-    - mccabe==0.7.0
-    - numpy==1.23.2
-    - packaging==21.3
-    - pandas==1.4.3
-    - paste==3.5.2.2
-    - pillow==9.2.0
-    - pyflakes==2.5.0
-    - pygments==2.13.0
-    - pyotp==2.6.0
-    - pyparsing==3.0.9
-    - python-dateutil==2.8.2
-    - pytz==2022.2.1
-    - pytz-deprecation-shim==0.1.0.post0
-    - pyyaml==6.0
-    - random-user-agent==1.0.1
-    - redis==4.3.4
-    - requests==2.28.1
-    - requests-toolbelt==0.9.1
-    - rich==12.6.0
-    - semver==2.13.0
-    - six==1.16.0
-    - sniffio==1.2.0
-    - soupsieve==2.3.2.post1
-    - stringcase==1.2.0
-    - structlog==22.3.0
-    - tenacity==8.0.1
-    - typing-extensions==4.3.0
-    - typing-inspect==0.8.0
-    - tzdata==2022.2
-    - tzlocal==4.2
-    - unidecode==1.3.4
-    - urllib3==1.26.12
-    - wrapt==1.14.1
-    - yapf==0.32.0
+      - anyio==3.6.1
+      - apscheduler==3.9.1.1
+      - async-timeout==4.0.2
+      - attrs==22.1.0
+      - beautifulsoup4==4.11.1
+      - better-exceptions==0.3.3
+      - bottle==0.12.23
+      - butilka==0.1.15
+      - cachable==0.3.11
+      - certifi==2022.6.15
+      - charset-normalizer==2.1.1
+      - colorama==0.4.6
+      - commonmark==0.9.1
+      - corelog==0.0.7
+      - dataclasses-json==0.5.7
+      - deprecated==1.2.13
+      - flake8==5.0.4
+      - humanfriendly==10.0
+      - idna==3.3
+      - marshmallow==3.17.1
+      - marshmallow-enum==1.5.1
+      - mccabe==0.7.0
+      - numpy==1.23.2
+      - packaging==21.3
+      - pandas==1.4.3
+      - paste==3.5.2.2
+      - pillow==9.2.0
+      - pydantic==1.10.4
+      - pyflakes==2.5.0
+      - pygments==2.13.0
+      - pyotp==2.6.0
+      - pyparsing==3.0.9
+      - python-dateutil==2.8.2
+      - pytz==2022.2.1
+      - pytz-deprecation-shim==0.1.0.post0
+      - pyyaml==6.0
+      - random-user-agent==1.0.1
+      - redis==4.3.4
+      - requests==2.28.1
+      - requests-toolbelt==0.9.1
+      - rich==12.6.0
+      - semver==2.13.0
+      - six==1.16.0
+      - sniffio==1.2.0
+      - soupsieve==2.3.2.post1
+      - stringcase==1.2.0
+      - structlog==22.3.0
+      - tenacity==8.0.1
+      - typing-extensions==4.3.0
+      - typing-inspect==0.8.0
+      - tzdata==2022.2
+      - tzlocal==4.2
+      - unidecode==1.3.4
+      - urllib3==1.26.12
+      - wrapt==1.14.1
+      - yapf==0.32.0
 variables:
   PIP_EXTRA_INDEX_URL: https://pypi.cacko.net/simple/
 prefix: /Volumes/Devo/miniforge3/envs/tick-server
