--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - pip=22.3.1
   - platformdirs=2.6.0
   - psutil=5.9.4
+  - pycodestyle=2.11.1
   - python=3.11.0
   - python_abi=3.11
   - readline=8.1.2
@@ -25,74 +26,29 @@ dependencies:
   - tk=8.6.12
   - toml=0.10.2
   - tomli=2.0.1
-  - typing_extensions=4.4.0
+  - tzdata=2023c
   - wheel=0.38.4
   - xz=5.2.6
   - pip:
-      - anyio==3.6.1
-      - apscheduler==3.9.1.1
-      - async-timeout==4.0.2
-      - attrs==22.1.0
-      - beautifulsoup4==4.11.1
-      - better-exceptions==0.3.3
-      - bottle==0.12.23
-      - butilka==0.1.15
-      - cachable==0.3.41
-      - certifi==2022.6.15
-      - charset-normalizer==2.1.1
-      - colorama==0.4.6
-      - commonmark==0.9.1
-      - corelog==0.0.7
-      - corestring==0.1.14
-      - cssselect==1.2.0
-      - d==0.2.2
-      - deprecated==1.2.13
-      - flake8==5.0.4
-      - humanfriendly==10.0
-      - idna==3.3
-      - lxml==4.9.2
-      - markdown==3.4.1
-      - marshmallow==3.17.1
-      - marshmallow-enum==1.5.1
-      - mccabe==0.7.0
-      - numpy==1.23.2
-      - packaging==21.3
-      - pandas==1.4.3
-      - paste==3.5.2.2
-      - pillow==9.2.0
-      - pycodestyle==2.9.1
-      - pydantic==1.10.4
-      - pyflakes==2.5.0
-      - pygments==2.13.0
-      - pyotp==2.6.0
-      - pyparsing==3.0.9
-      - pyquery==2.0.0
-      - python-dateutil==2.8.2
-      - pytz==2022.2.1
-      - pytz-deprecation-shim==0.1.0.post0
-      - pyyaml==6.0
+      - annotated-types==0.6.0
+      - apscheduler==3.10.4
+      - async-timeout==4.0.3
+      - beautifulsoup4==4.12.2
+      - cachable==0.3.46
+      - certifi==2023.7.22
+      - charset-normalizer==3.3.1
+      - idna==3.4
+      - pillow==10.1.0
+      - pydantic==2.4.2
+      - pydantic-core==2.10.1
+      - pytz==2023.3.post1
       - random-user-agent==1.0.1
-      - redis==4.3.4
-      - requests==2.28.1
-      - requests-toolbelt==0.9.1
-      - rich==12.6.0
-      - semver==2.13.0
+      - redis==5.0.1
+      - requests==2.31.0
+      - requests-toolbelt==1.0.0
       - six==1.16.0
-      - sniffio==1.2.0
-      - soupsieve==2.3.2.post1
-      - stringcase==1.2.0
-      - structlog==22.3.0
-      - tenacity==8.0.1
-      - types-requests==2.28.11.13
-      - types-urllib3==1.26.25.6
-      - typing-extensions==4.3.0
-      - typing-inspect==0.8.0
-      - tzdata==2022.2
-      - tzlocal==4.2
-      - unidecode==1.3.4
-      - urllib3==1.26.12
-      - wrapt==1.14.1
-      - yapf==0.32.0
-variables:
-  PIP_EXTRA_INDEX_URL: https://pypi.cacko.net/simple/
-prefix: /Volumes/Devo/miniforge3/envs/tick-server
+      - soupsieve==2.5
+      - typing-extensions==4.8.0
+      - tzlocal==5.2
+      - urllib3==2.0.7
+prefix: /Volumes/Devo/Users/jago/mambaforge/envs/tick-server
