--- a/environment.yml
+++ b/environment.yml
@@ -31,24 +31,54 @@ dependencies:
   - xz=5.2.6
   - pip:
       - annotated-types==0.6.0
+      - anyio==4.2.0
+      - appdirs==1.4.4
       - apscheduler==3.10.4
       - async-timeout==4.0.3
       - beautifulsoup4==4.12.2
+      - better-exceptions==0.3.3
       - cachable==0.3.46
       - certifi==2023.7.22
       - charset-normalizer==3.3.1
+      - colorama==0.4.6
+      - corefile==0.1.5
+      - corelog==0.0.13
+      - corestring==0.2.5
+      - fastapi==0.109.0
+      - fs==2.4.16
+      - h11==0.14.0
+      - httptools==0.6.1
       - idna==3.4
+      - markdown-it-py==3.0.0
+      - mdurl==0.1.2
+      - numpy==1.26.3
+      - opencv-python==4.9.0.80
       - pillow==10.1.0
+      - pixelme==0.4.13
       - pydantic==2.4.2
       - pydantic-core==2.10.1
+      - pygments==2.17.2
+      - pyotp==2.9.0
+      - python-dotenv==1.0.0
       - pytz==2023.3.post1
+      - pyyaml==6.0.1
       - random-user-agent==1.0.1
       - redis==5.0.1
       - requests==2.31.0
       - requests-toolbelt==1.0.0
+      - rich==13.7.0
+      - semver==3.0.2
       - six==1.16.0
+      - sniffio==1.3.0
       - soupsieve==2.5
+      - starlette==0.35.1
+      - stringcase==1.2.0
+      - structlog==24.1.0
       - typing-extensions==4.8.0
       - tzlocal==5.2
       - urllib3==2.0.7
-prefix: /Volumes/Devo/Users/jago/mambaforge/envs/tick-server
+      - uvicorn==0.26.0
+      - uvloop==0.19.0
+      - watchfiles==0.21.0
+      - websockets==12.0
+prefix: /Volumes/Devo/Users/jago/miniforge3/envs/tick-server
