--- a/environment.yml
+++ b/environment.yml
@@ -5,25 +5,26 @@ dependencies:
   - autopep8=2.0.1
   - black=22.10.0
   - bzip2=1.0.8
-  - ca-certificates=2022.12.7
+  - ca-certificates=2023.11.17
   - click=8.1.3
+  - libexpat=2.5.0
   - libffi=3.4.2
-  - libsqlite=3.40.0
+  - libsqlite=3.44.2
   - libzlib=1.2.13
   - mypy=1.0.0
   - mypy_extensions=0.4.3
-  - ncurses=6.3
-  - openssl=3.0.8
+  - ncurses=6.4
+  - openssl=3.2.0
   - pathspec=0.10.3
   - pip=22.3.1
   - platformdirs=2.6.0
   - psutil=5.9.4
   - pycodestyle=2.11.1
-  - python=3.11.0
+  - python=3.11.7
   - python_abi=3.11
-  - readline=8.1.2
+  - readline=8.2
   - setuptools=65.6.3
-  - tk=8.6.12
+  - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
   - tzdata=2023c
