--- a/environment.yml
+++ b/environment.yml
@@ -5,28 +5,36 @@ dependencies:
   - autopep8=2.0.1
   - black=22.10.0
   - bzip2=1.0.8
-  - ca-certificates=2023.11.17
+  - ca-certificates=2024.2.2
   - click=8.1.3
+  - colorama=0.4.6
   - libexpat=2.5.0
   - libffi=3.4.2
   - libsqlite=3.44.2
   - libzlib=1.2.13
+  - markdown-it-py=3.0.0
+  - mdurl=0.1.2
   - mypy=1.0.0
   - mypy_extensions=0.4.3
   - ncurses=6.4
-  - openssl=3.2.0
+  - openssl=3.2.1
   - pathspec=0.10.3
   - pip=22.3.1
   - platformdirs=2.6.0
   - psutil=5.9.4
   - pycodestyle=2.11.1
+  - pygments=2.17.2
   - python=3.11.7
   - python_abi=3.11
   - readline=8.2
+  - rich=13.7.0
   - setuptools=65.6.3
+  - shellingham=1.5.4
   - tk=8.6.13
   - toml=0.10.2
   - tomli=2.0.1
+  - typer=0.9.0
+  - typing_extensions=4.9.0
   - tzdata=2023c
   - wheel=0.38.4
   - xz=5.2.6
@@ -41,9 +49,8 @@ dependencies:
       - cachable==0.3.53
       - certifi==2023.7.22
       - charset-normalizer==3.3.1
-      - colorama==0.4.6
       - corefile==0.1.5
-      - corelog==0.0.16
+      - corelog==0.0.19
       - corestring==0.2.5
       - fastapi==0.109.0
       - fs==2.4.16
@@ -52,8 +59,6 @@ dependencies:
       - idna==3.4
       - ifaddr==0.2.0
       - lambo==10.0.8
-      - markdown-it-py==3.0.0
-      - mdurl==0.1.2
       - numpy==1.26.3
       - opencv-python==4.9.0.80
       - pillow==10.1.0
@@ -61,7 +66,6 @@ dependencies:
       - pydantic==2.4.2
       - pydantic-core==2.10.1
       - pydantic-settings==2.1.0
-      - pygments==2.17.2
       - pyotp==2.9.0
       - python-dotenv==1.0.0
       - python-hue-v2==1.0.3
@@ -71,7 +75,6 @@ dependencies:
       - redis==5.0.1
       - requests==2.31.0
       - requests-toolbelt==1.0.0
-      - rich==13.7.0
       - semver==3.0.2
       - six==1.16.0
       - sniffio==1.3.0
@@ -79,7 +82,6 @@ dependencies:
       - starlette==0.35.1
       - stringcase==1.2.0
       - structlog==24.1.0
-      - typer==0.9.0
       - typing-extensions==4.8.0
       - tzlocal==5.2
       - urllib3==2.0.7
